<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="20dp">


            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/am"
                android:contentDescription="TODO" />
            <TextView
                android:text="Silahkan login dibawah ini"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textColor="#000"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:autofillHints="" />



            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:autofillHints="" />

        <RelativeLayout
            android:id="@+id/btnSignIn"
            android:background="@drawable/btn_regis"
            android:layout_width="match_parent"
            android:padding="6dp"
            android:gravity="center"
            android:layout_height="wrap_content">


            <ImageView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_regis"/>
            <TextView
                android:text="@string/prompt_sign_in"
                android:textColor="#FFF"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="21dp"/>
        </RelativeLayout>
            <RelativeLayout
                android:id="@+id/btnSignUp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_regis"
                android:layout_width="match_parent"
                android:padding="6dp"
                android:gravity="center"
                android:layout_height="wrap_content">


                <ImageView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_regis"/>
                <TextView
                    android:text="@string/sign_up"
                    android:textColor="#FFF"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="21dp"/>
            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:visibility="invisible"/>

</LinearLayout>
